# nemoclaw-local-foundation

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yaml  fix_catalog_parser.py  fix_light_theme.py  fix_main_py.py  fix_modern_ui.py  fix_rendering.py  fix_revert_dark.py  fix_white_original.py  package-lock.json  pyproject.toml
.claude/: launch.json  settings.json
cc2-brain/: INSTALL.md  apply_cc2.py
command-center/: README.md  start.sh
config/: .env.example  anthropic-agent-profiles.yaml  browser-autonomy.yaml  content-safety.yaml  google-agent-profiles.yaml  pinchtab-config.yaml  site-profiles.yaml  vault-config.yaml  web-permissions.yaml
docs/: a2a-integration-spec.md  architecture-lock.md  command-center-spec.md  competitive-improvements.md  dashboard-spec.md  deployment.md  github-intelligence-report.md  llm-setup-anthropic.md  llm-setup-google.md  llm-setup-openai.md  prompt-engineering-guide.md  revenue-architecture.md  script-reference.md  skill-audit-report.md  skill-catalog-k40-k49.yaml  skill-catalog-k50-k54.yaml  tier1-signup-guide.md  tool-stack.md
lib/: agent_context.py  chain_router.py  circuit_breaker.py  config_loader.py  executor_backends.py  hitl_interrupt.py  mcp_gateway.py  prompt_sanitizer.py  routing.py  session_pool.py  skill_metrics.py  structured_logging.py  vector_memory.py
openclaw.json/: openclaw.json  openclaw.json.bak
scripts/: access_control.py  agent_memory.py  agent_messaging.py  agent_performance.py  agent_registry.py  apify_bridge.py  apollo_bridge.py  auth_flows.py  auto-builder.py  avatar_character_sheet.py  avatar_heygen_uploader.py  avatar_pose_generator.py  avatar_pose_pipeline.py  avatar_quality_gate.py  behavior_guard.py  browser_autonomy.py  browser_use_adapter.py  budget-enforcer.py  budget-status.py  checkpoint-manager.py  checkpoint_utils.py  ci_policy_check.py  conflict_resolution.py  content_analytics_collector.py  content_factory_runner.py  context_manager.py  cost_governor.py  credential_vault.py  daily-health.sh  decision_log.py  deploy-p1.py  deploy-p10.py  deploy-p12.py  (+57 more)
(+1090 files in other folders)
